fix: endless waiting on start/stop