@@ -58,7 +58,7 @@ class GithubWorkflowTemplateTest {
             }
         });
         try {
-            Files.write(file, newContent.toString().getBytes(UTF_8));
+            Files.writeString(file, newContent.toString());
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -86,7 +86,7 @@ class GithubWorkflowTemplateTest {
 
     private void readLines(final Path file, final Consumer<String> consumer) {
         try {
-            final Scanner scanner = new Scanner(file, UTF_8.name()).useDelimiter("(?<=\n)|(?!\n)(?<=\r)");
+            final Scanner scanner = new Scanner(file, UTF_8).useDelimiter("(?<=\n)|(?!\n)(?<=\r)");
             while (scanner.hasNext()) {
                 final String line = scanner.next();
                 if (line != null) {
